Fixed description and header overflow.

--- a/src/assets/styles/cmps/user-profile-page/_UserProfile.scss
+++ b/src/assets/styles/cmps/user-profile-page/_UserProfile.scss
@@ -14,6 +14,7 @@
     position: relative;
     margin-bottom: 20px;
     width: 100%;
+    min-width: min-content;
     background: $mainColor-light0;
   }
 
@@ -83,6 +84,7 @@
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin: 20px;
+    min-width: min-content;
   }
 
   &__description {
